[package]
name = "pdslib"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "pdslib"
crate-type = ["cdylib", "lib"]

[features]
default = []
# Experimental features
big-bird-eval = [
    "debug-reports", 
    "passive-privacy-loss-api", 
    "experimental-baselines"
]
# Individual feature flags
debug-reports = []
passive-privacy-loss-api = []
experimental-baselines = []

[dependencies]
thiserror = "2.0"
anyhow = "1.0"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
log4rs = "1.2"

[dev-dependencies]
log4rs = "1.2"
approx = "0.5"

[profile.release]
debug = true
