[project]
name = "on-device-budgeting"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.7"
dependencies = [
    "evaluation",
    "pdslib",
    "maturin>=1.7.4",
    "pip>=24.2",
    "uniffi-bindgen>=0.28.0",
    "rust-just>=1.36.0",
]

[tool.uv.workspace]
members = ["evaluation", "pdslib"]

[tool.uv.sources]
evaluation = { workspace = true }
pdslib = { workspace = true }

